EXM-52962: use Collectors to compute the list from a stream